Fix overflow for mobile

--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -28,6 +28,10 @@
 }
 
 @media (max-width: 996px) {
+  .pentagon-container {
+    overflow-x: hidden;
+  }
+
   .pentagon-shift {
     position: static;
   }
